--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -6,6 +6,7 @@
   border-radius: 2rem;
   position: relative;
   flex-shrink: 0;
+  cursor: pointer;
 }
 
 .card .card-image-container {
@@ -24,7 +25,7 @@
   height: 25%;
   display: grid;
   align-items: flex-end;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns:  4fr 1fr;
   gap: 0.5rem;
   width: 100%;
 }
